--- a/index.html
+++ b/index.html
@@ -68,63 +68,65 @@
                     <!-- Карточка товара 1 -->
                     <div class="product-card">
                         <div class="product-card__image">
-                            <img src="images/window1.jpg" alt="Окно VEKA Softline">
+                            <img src="images/card1.webp" alt="Окно REHAU Blitz">
                         </div>
                         <div class="product-card__content">
-                            <h3 class="product-card__title">VEKA Softline</h3>
-                            <p class="product-card__description">Классический профиль с оптимальными характеристиками</p>
-                            <div class="product-card__price">от 12 990 ₽/м²</div>
+                            <h3 class="product-card__title">ПВХ Окна</h3>
+                            <p class="product-card__description">Энергоэффективные окна с повышенной прочностью</p>
+                            <div class="product-card__price">от 14 500 ₽/м²</div>
                             <button class="btn btn--outline product-card__details-btn">Подробнее</button>
                         </div>
                         <div class="product-card__details">
                             <ul>
-                                <li>5-камерный профиль</li>
-                                <li>Шумоизоляция до 34 дБ</li>
-                                <li>Теплосбережение до -45°C</li>
-                                <li>Гарантия 7 лет</li>
+                                <li>Любые формы и размеры окон для дома</li>
+                                <li>Более 50 цветов и фактур ламинации</li>
+                                <li>58мм/60мм/70мм профили B и A класса в трёх готовых цветах: белый, графитовый, шоколадно-коричневый</li>
+                                <li>Стеклопакет с энергосберегающим напылением</li>
+                                <li>фурнитура с микропроветриванием</li>
                             </ul>
-                            <!-- <button class="btn btn--primary">Заказать</button> -->
                         </div>
                     </div>
 
                     <!-- Карточка товара 2 -->
                     <div class="product-card">
                         <div class="product-card__image">
-                            <img src="images/window2.jpg" alt="Окно REHAU Blitz">
+                            <img src="images/card2.jpg" alt="Окно VEKA Softline">
                         </div>
                         <div class="product-card__content">
-                            <h3 class="product-card__title">REHAU Blitz</h3>
-                            <p class="product-card__description">Энергоэффективные окна с повышенной прочностью</p>
-                            <div class="product-card__price">от 14 500 ₽/м²</div>
+                            <h3 class="product-card__title">ПВХ Двери</h3>
+                            <p class="product-card__description">Классический профиль с оптимальными характеристиками</p>
+                            <div class="product-card__price">от 12 990 ₽/м²</div>
                             <button class="btn btn--outline product-card__details-btn">Подробнее</button>
                         </div>
                         <div class="product-card__details">
                             <ul>
-                                <li>6-камерный профиль</li>
-                                <li>Шумоизоляция до 38 дБ</li>
-                                <li>Теплосбережение до -50°C</li>
-                                <li>Гарантия 10 лет</li>
+                                <li>Двери, входные группы и раздвижные порталы для дома</li>
+                                <li>60/70мм профиль специально для дверей из ПВХ</li>
+                                <li>Армирование шириной 2мм для прочности изделий</li>
+                                <li>Многозапорные замки ,обеспечивающие плотный прижим</li>
                             </ul>
+                            <!-- <button class="btn btn--primary">Заказать</button> -->
                         </div>
                     </div>
 
                     <!-- Карточка товара 3 -->
                     <div class="product-card">
                         <div class="product-card__image">
-                            <img src="images/window2.jpg" alt="Окно REHAU Blitz">
+                            <img src="images/card3.png" alt="Окно REHAU Blitz">
                         </div>
                         <div class="product-card__content">
-                            <h3 class="product-card__title">REHAU Blitz</h3>
+                            <h3 class="product-card__title">Комплектующие для окон</h3>
                             <p class="product-card__description">Энергоэффективные окна с повышенной прочностью</p>
                             <div class="product-card__price">от 14 500 ₽/м²</div>
                             <button class="btn btn--outline product-card__details-btn">Подробнее</button>
                         </div>
                         <div class="product-card__details">
                             <ul>
-                                <li>6-камерный профиль</li>
-                                <li>Шумоизоляция до 38 дБ</li>
-                                <li>Теплосбережение до -50°C</li>
-                                <li>Гарантия 10 лет</li>
+                                <li>Подоконники шириной от 100мм до 600мм</li>
+                                <li>Оцинкованные и окрашенные отливы</li>
+                                <li>Откосы из Сендвич панелей</li>
+                                <li>Нащельник 60мм/100мм/150мм</li>
+                                <li>Монтажные пластины и анкера</li>
                             </ul>
                         </div>
                     </div>
@@ -132,20 +134,19 @@
                     <!-- Карточка товара 4 -->
                     <div class="product-card">
                         <div class="product-card__image">
-                            <img src="images/window2.jpg" alt="Окно REHAU Blitz">
+                            <img src="images/card4.jpg" alt="Окно REHAU Blitz">
                         </div>
                         <div class="product-card__content">
-                            <h3 class="product-card__title">REHAU Blitz</h3>
+                            <h3 class="product-card__title">Алюминиевые окна</h3>
                             <p class="product-card__description">Энергоэффективные окна с повышенной прочностью</p>
                             <div class="product-card__price">от 14 500 ₽/м²</div>
                             <button class="btn btn--outline product-card__details-btn">Подробнее</button>
                         </div>
                         <div class="product-card__details">
                             <ul>
-                                <li>6-камерный профиль</li>
-                                <li>Шумоизоляция до 38 дБ</li>
-                                <li>Теплосбережение до -50°C</li>
-                                <li>Гарантия 10 лет</li>
+                                <li>Распашные и раздвижные конструкции PROVEDAL</li>
+                                <li>Тёплые алюминиевые окна из профиля Татпроф 65</li>
+                                <li>Холодные алюминиевые окна из профиля Татпроф 45</li>
                             </ul>
                         </div>
                     </div>
@@ -153,20 +154,18 @@
                     <!-- Карточка товара 5 -->
                     <div class="product-card">
                         <div class="product-card__image">
-                            <img src="images/window2.jpg" alt="Окно REHAU Blitz">
+                            <img src="images/card5.jpeg" alt="Окно REHAU Blitz">
                         </div>
                         <div class="product-card__content">
-                            <h3 class="product-card__title">REHAU Blitz</h3>
+                            <h3 class="product-card__title">Алюминиевые двери</h3>
                             <p class="product-card__description">Энергоэффективные окна с повышенной прочностью</p>
                             <div class="product-card__price">от 14 500 ₽/м²</div>
                             <button class="btn btn--outline product-card__details-btn">Подробнее</button>
                         </div>
                         <div class="product-card__details">
                             <ul>
-                                <li>6-камерный профиль</li>
-                                <li>Шумоизоляция до 38 дБ</li>
-                                <li>Теплосбережение до -50°C</li>
-                                <li>Гарантия 10 лет</li>
+                                <li>Штульповые двери без перегородки между створками</li>
+                                <li>Маятниковые двери, открывающиеся в обе стороны</li>
                             </ul>
                         </div>
                     </div>
@@ -174,20 +173,19 @@
                     <!-- Карточка товара 6 -->
                     <div class="product-card">
                         <div class="product-card__image">
-                            <img src="images/window2.jpg" alt="Окно REHAU Blitz">
+                            <img src="images/card6.jpg" alt="Окно REHAU Blitz">
                         </div>
                         <div class="product-card__content">
-                            <h3 class="product-card__title">REHAU Blitz</h3>
+                            <h3 class="product-card__title">Витражи и перегородки</h3>
                             <p class="product-card__description">Энергоэффективные окна с повышенной прочностью</p>
                             <div class="product-card__price">от 14 500 ₽/м²</div>
                             <button class="btn btn--outline product-card__details-btn">Подробнее</button>
                         </div>
                         <div class="product-card__details">
                             <ul>
-                                <li>6-камерный профиль</li>
-                                <li>Шумоизоляция до 38 дБ</li>
-                                <li>Теплосбережение до -50°C</li>
-                                <li>Гарантия 10 лет</li>
+                                <li>Тёплые перегородки из профиля Татпроф 65</li>
+                                <li>Перегородки внутри помещения из профиля Татпроф 45</li>
+                                <li>Витражное остекление из профиля Татпроф 50</li>
                             </ul>
                         </div>
                     </div>
@@ -212,7 +210,7 @@
                         </ul>
                     </div>
                     <div class="about__image">
-                        <img src="images/about.jpg" alt="Наше производство">
+                        <img src="images/manufacture3.webp" alt="Наше производство">
                     </div>
                 </div>
             </div>
@@ -241,7 +239,7 @@
             <div class="footer__content">
                 <div class="footer__info">
                     <div class="footer__logo">
-                        <img src="images/logo-white.png" alt="Premium Windows">
+                        <img src="images/logo.png" alt="Premium Windows">
                     </div>
                     <p>Современные окна премиум-класса с гарантией качества</p>
                 </div>
@@ -265,7 +263,7 @@
                 </div>
             </div>
             <div class="footer__copyright">
-                <p>&copy; 2023 Premium Windows. Все права защищены.</p>
+                <p>&copy; 2025 ОкнаТек. Все права защищены.</p>
             </div>
         </div>
     </footer>
